<!--Copyright 2019 Anita Martin. All rights reserved.-->
<resources>
    <string name="app_name">Beer Buddy</string>
    <string name="happy_hour_fragment">Hello blank fragment</string>
    <string name="title_home">title_home</string>
    <string name="title_dashboard">title_dashboard</string>
    <string name="title_notifications">title_notification</string>
    <string name="bar_fragment_title">bar_fragment_title</string>
    <string name="beer_fragment">beer_fragment</string>
    <string name="select_beer">Select Beer</string>
    <string name="select_brewery">Select Brewery</string>
    <string name="select_beer_type">Select Beer Type</string>
    <string name="select_beer_style">Select Beer Style</string>
    <string name="update_search">Update Search</string>
    <string name="bar_name">Bar Name</string>
    <string name="input_time">Happy Hours</string>
    <string name="enter_address">Enter Address</string>
    <string name="add_button_hr">Add</string>
    <string name="select_beer_abv">Select Beer ABV</string>
    <string name="week_days">Week Days</string>
    <string name="map_icon">MAP</string>
    <string name="beer_icon">BEER</string>
    <string name="happy_hour_icon">HAPPY HOUR</string>
    <string name="authentication_error">Unable to authenticate user</string>
    <string name="select_bar_text">Select Bar</string>
    <string name="select_type_text">Select Type</string>
    <string name="select_location_text">Select Location</string>
    <string name="projected_date_text">Projected Date</string>
    <string name="bar_icon">BAR</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="search_bar">Search Bar: %s</string>
    <string name="search_all_bar">All Bars</string>
    <string name="search_beer">Search Beer: %s</string>
    <string name="search_all_beer">All Beer</string>
    <string name="search_description">search_description</string>
    <string name="clear_description">clear_description</string>
    <string name="set_text_bar">Select Bar</string>
    <string name="set_text_time">Input Time</string>
    <string name="set_text_weekday">Input Weekday</string>>
</resources>
