<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

  <fragment
          android:id="@+id/nav_host_fragment"
          app:navGraph="@navigation/nav_graph"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:name="androidx.navigation.fragment.NavHostFragment"
          app:defaultNavHost="true"
          tools:layout="androidx.navigation.fragment.NavHostFragment"/>


  <item
    android:id="@+id/navigation_bar"
    android:title="@string/bar_icon"/>
  <item
    android:id="@+id/navigation_beer"
    android:title="@string/beer_icon"/>
  <item
    android:id="@+id/navigation_happy_hour"
    android:title="@string/happy_hour_icon"/>
  <item
    android:id="@+id/sign_out"
    android:title="@string/sign_out"/>

</menu>

